--- a/g_describeHTML/Cars_continuous.html
+++ b/g_describeHTML/Cars_continuous.html
@@ -461,7 +461,7 @@ summary {
 <div id="description-of-hp" class="section level2">
 <h2>Description of <strong>hp</strong>:</h2>
 <table>
-<caption>Mean and Percentile table</caption>
+<caption>Mean, SD and Percentile table</caption>
 <thead>
 <tr class="header">
 <th align="left"></th>
@@ -471,27 +471,31 @@ summary {
 <tbody>
 <tr class="odd">
 <td align="left">Minimum</td>
-<td align="right">52.0000</td>
+<td align="right">52.00000</td>
 </tr>
 <tr class="even">
 <td align="left">25th Percentile</td>
-<td align="right">96.5000</td>
+<td align="right">96.50000</td>
 </tr>
 <tr class="odd">
 <td align="left">Median</td>
-<td align="right">123.0000</td>
+<td align="right">123.00000</td>
 </tr>
 <tr class="even">
 <td align="left">75th Percentile</td>
-<td align="right">180.0000</td>
+<td align="right">180.00000</td>
 </tr>
 <tr class="odd">
 <td align="left">Maximum</td>
-<td align="right">335.0000</td>
+<td align="right">335.00000</td>
 </tr>
 <tr class="even">
 <td align="left">Mean</td>
-<td align="right">146.6875</td>
+<td align="right">146.68750</td>
+</tr>
+<tr class="odd">
+<td align="left">Standar Deviation</td>
+<td align="right">68.56287</td>
 </tr>
 </tbody>
 </table>
