--- a/g_describeHTML/Vaccine_Dataset.html
+++ b/g_describeHTML/Vaccine_Dataset.html
@@ -614,7 +614,7 @@ summary {
 <div id="description-of-vx_admin_date" class="section level2">
 <h2>Description of <strong>vx_admin_date</strong>:</h2>
 <table>
-<caption>Mean and Percentile table</caption>
+<caption>Mean, SD and Percentile table</caption>
 <thead>
 <tr class="header">
 <th align="left"></th>
@@ -624,27 +624,31 @@ summary {
 <tbody>
 <tr class="odd">
 <td align="left">Minimum</td>
-<td align="right">20180102</td>
+<td align="right">20180102.000</td>
 </tr>
 <tr class="even">
 <td align="left">25th Percentile</td>
-<td align="right">20190621</td>
+<td align="right">20190621.000</td>
 </tr>
 <tr class="odd">
 <td align="left">Median</td>
-<td align="right">20200508</td>
+<td align="right">20200508.000</td>
 </tr>
 <tr class="even">
 <td align="left">75th Percentile</td>
-<td align="right">20201119</td>
+<td align="right">20201119.000</td>
 </tr>
 <tr class="odd">
 <td align="left">Maximum</td>
-<td align="right">20210323</td>
+<td align="right">20210323.000</td>
 </tr>
 <tr class="even">
 <td align="left">Mean</td>
-<td align="right">20196044</td>
+<td align="right">20196043.750</td>
+</tr>
+<tr class="odd">
+<td align="left">Standar Deviation</td>
+<td align="right">9746.683</td>
 </tr>
 </tbody>
 </table>
